# se-toolkit-lab-8

./: .env.docker.secret.template  Dockerfile  README.md  REPORT.md  docker-compose.yml  docker-compose.yml.backup  docker-compose.yml.bak  nanobot_startup_log.txt  pyproject.toml  setup-vm.sh
backend/app/routers/: items.py
backend/src/lms_backend/routers/: items.py
caddy/: Caddyfile
mcp/: pyproject.toml
mcp/mcp-obs/: README.md  pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __init__.py  __main__.py  client.py  observability.py  server.py  settings.py  tools.py
mcp/mcp_cron/: __init__.py  __main__.py  server.py
mcp/mcp_observability/: README.md  __init__.py  __main__.py  pyproject.toml  server.py
nanobot/: Dockerfile  check_errors.py  config.json  config.json.bak  config.json.example  config_bare.json  entrypoint.py  pyproject.toml  test_api.py  test_api_qwen3.py
nanobot/mcp_observability/: __main__.py  server.py
nanobot/workspace/: AGENTS.md
nanobot/workspace/sessions/: cli_direct.jsonl
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
