[project]
name = "nanobot"
version = "0.1.0"
description = "Nanobot gateway deployment"
requires-python = "==3.14.2"
dependencies = [
    "nanobot-ai",
    "nanobot-webchat",
    "mcp-observability",
    "httpx",
    "pydantic",
]

[tool.uv.sources]
nanobot-webchat = { path = "../nanobot-websocket-channel/nanobot-webchat", editable = true }
mcp-observability = { path = "../mcp/mcp_observability", editable = true }
