[project]
name = "mcp-obs"
version = "0.1.0"
description = "MCP server for VictoriaLogs and VictoriaTraces observability"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-obs = "mcp_obs.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
