[project]
name = "mcp-obs"
version = "0.1.0"
description = "MCP server for observability data (VictoriaLogs + VictoriaTraces)"
requires-python = "==3.14.*"
dependencies = [
    "httpx>=0.28.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_obs"]
